fixed header spacing

--- a/src/components/styles.module.css
+++ b/src/components/styles.module.css
@@ -3,6 +3,7 @@
 .header {
   display: flex;
   align-items: center;
+  justify-content: space-between;
   padding: 2rem;
   background-color: var(--theme-red);
   color: #ededed;
